// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button H1 1`] = `
.c0 {
  font-size: 2rem;
  margin: 0.625rem 0;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgb(73,73,73);
  font-size: 2.25rem;
  line-height: 2.8125rem;
  font-style: normal;
  font-stretch: normal;
  font-weight: normal;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 1.5rem;
}

<h1
  className="c0"
>
  Inspire the lazy
</h1>
`;

exports[`Button H2 1`] = `
.c0 {
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.875rem;
  font-size: 1.5rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 1.5rem;
}

<h2
  className="c0"
>
  Inspire the lazy
</h2>
`;

exports[`Button H3 1`] = `
.c0 {
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 0.75rem;
}

<h3
  className="c0"
>
  Inspire the lazy
</h3>
`;

exports[`Button H4 1`] = `
.c0 {
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 0.75rem;
}

<h4
  className="c0"
>
  Inspire the lazy
</h4>
`;

exports[`Button H5 1`] = `
.c0 {
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 0.75rem;
}

<h4
  className="c0"
>
  Inspire the lazy
</h4>
`;

exports[`Button H6 1`] = `
.c0 {
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.125rem;
  font-size: 0.8125rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 0.75rem;
}

<h6
  className="c0"
>
  Inspire the lazy
</h6>
`;

exports[`Button Paragraph 1`] = `
.c0 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

<p
  className="c0"
>
  Inspire the lazy
</p>
`;

exports[`Button Small 1`] = `
.c0 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgb(73,73,73);
  line-height: 1.125rem;
  font-size: 0.8125rem;
  padding-bottom: 0.75rem;
}

<small
  className="c0"
>
  Inspire the lazy
</small>
`;

exports[`Button Sup 1`] = `
.c0 {
  position: absolute;
  margin-left: 0.375rem;
  font-weight: 600;
  line-height: normal;
  font-size: 0.5rem;
  color: rgb(59,70,204);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<sup
  className="c0"
>
  Inspire the lazy
</sup>
`;

exports[`Button Sup badge 1`] = `
.c0 {
  position: absolute;
  margin-left: 0.375rem;
  font-weight: 600;
  line-height: normal;
  font-size: 0.5rem;
  color: rgb(59,70,204);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.1875rem;
  padding: 0.125rem 0.1875rem;
  background: rgb(59,70,204);
  color: rgb(255,255,255);
}

<sup
  className="c0"
>
  Inspire the lazy
</sup>
`;
